--- a/.github/workflows/issue-parser.yml
+++ b/.github/workflows/issue-parser.yml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       contents: write
       issues: write
+      pull-requests: write
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js
