--- a/.github/workflows/issue-parser.yml
+++ b/.github/workflows/issue-parser.yml
@@ -3,6 +3,8 @@ name: Issue Parser
 on:
   issues:
     types: [opened, edited]
+  watch:
+    types: [started]  # 监听 star 事件
 
 jobs:
   parse-issues:
