--- a/.github/workflows/issue-parser.yml
+++ b/.github/workflows/issue-parser.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install dependencies
-        run: npm install @octokit/rest axios
+        run: npm ci
       - name: Parse Issues and Generate Data
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
