--- a/.github/workflows/site-checker.yml
+++ b/.github/workflows/site-checker.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: '16'
       - name: Install dependencies
-        run: npm install @octokit/rest axios cheerio
+        run: npm ci
       - name: Check Sites and Update Labels
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
