--- a/.github/workflows/site-checker.yml
+++ b/.github/workflows/site-checker.yml
@@ -19,8 +19,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+          cache: 'npm'
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm install
       - name: Check Sites and Update Labels
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
