--- a/.github/workflows/issue-parser.yml
+++ b/.github/workflows/issue-parser.yml
@@ -22,7 +22,7 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: |
-          npm install
+          npm ci
       - name: Parse Issues and Generate Data
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
