--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@octokit/rest": "latest",
     "axios": "latest",
     "cheerio": "latest",
-    "js-yaml": "latest"
+    "js-yaml": "latest",
+    "node-fetch": "^3.3.2"
   }
 }
