--- a/.github/workflows/issue-parser.yml
+++ b/.github/workflows/issue-parser.yml
@@ -1,6 +1,7 @@
 name: Issue Parser
 
 on:
+  push:
   issues:
     types: [opened, edited]
   watch:
@@ -22,7 +23,7 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: |
-          npm ci
+          npm install
       - name: Parse Issues and Generate Data
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
