--- a/.github/workflows/site-checker.yml
+++ b/.github/workflows/site-checker.yml
@@ -22,8 +22,7 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: |
-          npm install
-          npm install node-fetch@3
+          npm ci
       - name: Check Sites and Update Labels
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
