--- a/.github/workflows/site-checker.yml
+++ b/.github/workflows/site-checker.yml
@@ -22,7 +22,7 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: |
-          npm ci
+          npm install
       - name: Check Sites and Update Labels
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
